branche 2 spuštění aplikace restaurace

--- a/restaurant/apprestaurant/templates/restaurant_list.html
+++ b/restaurant/apprestaurant/templates/restaurant_list.html
@@ -8,7 +8,7 @@
     <h1>Restaurants</h1>
     <ul>
         {% for restaurant in restaurants %}
-            <li>{{ restaurant.name }} - {{ restaurant.location }}</li>
+            <li>{{ restaurant.name }}</li>
         {% empty %}
             <li>No restaurants found.</li>
         {% endfor %}
