--- a/restaurant/core/templates/main_menu.html
+++ b/restaurant/core/templates/main_menu.html
@@ -1,6 +1,9 @@
 <nav>
     <ul>
         <li><a href="{% url 'home' %}"> Home </a></li>
+        <li><a href="{% url 'restaurant_create' %}"> Create restaurant </a></li>
+        <li><a href="{% url 'restaurant_list' %}"> List restaurant </a></li>
+        <li><a href="{% url 'restaurant_update' %}"> Update restaurant </a></li>
     </ul>
 </nav>
 
