--- a/restaurant/apprestaurant/templates/edit_restaurant.html
+++ b/restaurant/apprestaurant/templates/edit_restaurant.html
@@ -4,7 +4,7 @@
     <title>Edit Restaurant</title>
 </head>
 <body>
-    <h1>Edit {{ form.instance.name }}</h1>
+    <h1>Edit Restaurant</h1>
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
