--- a/restaurant/apprestaurant/templates/add_restaurant.html
+++ b/restaurant/apprestaurant/templates/add_restaurant.html
@@ -1,15 +1,16 @@
+{% extends "master.html" %}
 
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Add Restaurant</title>
-</head>
-<body>
+{% block title %}
+  Home
+{% endblock %}
+
+
+{% block content %}
     <h1>Add a new Restaurant</h1>
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
         <button type="submit">Save</button>
     </form>
-</body>
-</html>
+
+{% endblock %}
