--- a/restaurant/apprestaurant/templates/edit_restaurant.html
+++ b/restaurant/apprestaurant/templates/edit_restaurant.html
@@ -1,15 +1,16 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Edit Restaurant</title>
-</head>
-<body>
+{% extends "master.html" %}
+
+{% block title %}
+  Home
+{% endblock %}
+
+
+{% block content %}
     <h1>Edit Restaurant</h1>
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
         <button type="submit">Save</button>
     </form>
-</body>
-</html>
 
+{% endblock %}
