--- a/restaurant/core/templates/main_menu.html
+++ b/restaurant/core/templates/main_menu.html
@@ -3,7 +3,7 @@
         <li><a href="{% url 'home' %}"> Home </a></li>
         <li><a href="{% url 'restaurant_create' %}"> Create restaurant </a></li>
         <li><a href="{% url 'restaurant_list' %}"> List restaurant </a></li>
-
+        <li><a href="{% url 'register' %}"> Register </a></li>
 
     </ul>
 </nav>
